Cleaned up code a little bit

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <div class="board-container" id="board">
             <canvas id="canvas" class="board-canvas"></canvas>
         </div>
+        <div id="mouse-pos">
+            
+        </div>
         <div class="player">
             <div class="name-timer">
                 <div class="name">           
@@ -31,16 +34,12 @@
                 </div>
             </div>
         </div>
-        <div style="display: flex;">
-            <h1 id="X">X</h1>
-            <h1>:</h1>
-            <h1 id="Y">Y</h1>
-        </div>
         
     </div>
-
+    <script src="ChessLogics/Piece.js"></script>
     <script src="constants.js"></script>
     <script src="setup.js"></script>
+    <script src="load_images.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
